[gd_scene load_steps=13 format=3 uid="uid://bhwajmjw4lmm"]

[ext_resource type="Script" path="res://scenes/customer/paper.gd" id="1_mb1i7"]
[ext_resource type="Texture2D" uid="uid://c56tyhh64430e" path="res://assets/art/patient_paper.png" id="2_2c2sk"]
[ext_resource type="Texture2D" uid="uid://dxiy1dte1rkca" path="res://assets/art/vampire_paper.png" id="3_8evai"]
[ext_resource type="FontFile" uid="uid://c51fwr61whyld" path="res://assets/fonts/Milky Mania.ttf" id="4_c20nu"]
[ext_resource type="AudioStream" uid="uid://bi8d00ttkj8l0" path="res://assets/sounds/paper.wav" id="5_nuyas"]
[ext_resource type="Animation" uid="uid://7deuy65ojijq" path="res://assets/animations/DELETE.res" id="6_lehsp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_e20ry"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2c2sk")
}, {
"duration": 1.0,
"texture": ExtResource("3_8evai")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huqje"]
size = Vector2(108, 144.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gy6cj"]
size = Vector2(32.8389, 168.617)

[sub_resource type="Animation" id="Animation_dk6l5"]
resource_name = "FINISH"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 60), Vector2(0, 94.365), Vector2(0, -202.375)]
}

[sub_resource type="Animation" id="Animation_g7tq8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 60)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.167154, 0.167154)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q7l04"]
_data = {
"DELETE": ExtResource("6_lehsp"),
"FINISH": SubResource("Animation_dk6l5"),
"RESET": SubResource("Animation_g7tq8")
}

[node name="Paper" type="RigidBody2D" groups=["Paper"]]
position = Vector2(0, 93)
collision_layer = 4
collision_mask = 4
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_mb1i7")
metadata/_edit_horizontal_guides_ = [24.0]
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 60)
scale = Vector2(0.167154, 0.167154)
sprite_frames = SubResource("SpriteFrames_e20ry")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(0, -660.29)
scale = Vector2(8.68802, 8.68802)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
position = Vector2(-1, 76.25)
shape = SubResource("RectangleShape2D_huqje")

[node name="Area2D2" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(0, -358.95)
scale = Vector2(7.38947, 7.38947)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D2"]
position = Vector2(0.713889, 48.4747)
shape = SubResource("RectangleShape2D_gy6cj")
debug_color = Color(0.811765, 0.345098, 0.580392, 0.419608)

[node name="Name" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = 26.6224
offset_top = -512.701
offset_right = 264.622
offset_bottom = -462.701
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "Name: Lorem"
fit_content = true
autowrap_mode = 0

[node name="Age" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = 26.6224
offset_top = -434.945
offset_right = 173.622
offset_bottom = -384.945
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "Age: 18"
fit_content = true
autowrap_mode = 0

[node name="ID" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = 26.6224
offset_top = -344.376
offset_right = 173.622
offset_bottom = -294.376
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "ID: 0"
fit_content = true
autowrap_mode = 0

[node name="Likes" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = -333.126
offset_top = -149.679
offset_right = -186.126
offset_bottom = -99.6793
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "Likes
"
fit_content = true
autowrap_mode = 0

[node name="Likes1" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = -311.771
offset_top = -68.5331
offset_right = -164.771
offset_bottom = -18.5331
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "----"
fit_content = true
autowrap_mode = 0

[node name="Likes2" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = -307.5
offset_top = 12.6124
offset_right = -160.5
offset_bottom = 62.6124
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "----"
fit_content = true
autowrap_mode = 0

[node name="Dislikes" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = 29.8959
offset_top = -153.95
offset_right = 176.896
offset_bottom = -103.95
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "Dislikes"
fit_content = true
autowrap_mode = 0

[node name="Dislikes1" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = 47.8434
offset_top = -72.8041
offset_right = 194.843
offset_bottom = -22.8041
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "----"
fit_content = true
autowrap_mode = 0

[node name="Dislikes2" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = 51.2501
offset_top = 4.07111
offset_right = 198.25
offset_bottom = 54.0711
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "----"
fit_content = true
autowrap_mode = 0

[node name="OrderDetails" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = -307.5
offset_top = 149.28
offset_right = -42.5003
offset_bottom = 199.28
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "Order Options"
fit_content = true
autowrap_mode = 0

[node name="BloodType" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = -273.334
offset_top = 247.508
offset_right = 28.6664
offset_bottom = 297.508
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "Blood Type: AB+"
fit_content = true
autowrap_mode = 0

[node name="Supplements" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = -276.741
offset_top = 350.007
offset_right = 225.26
offset_bottom = 400.007
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "Supplements: Iron, Calcium"
fit_content = true
autowrap_mode = 0

[node name="Diabetic" type="RichTextLabel" parent="AnimatedSprite2D"]
offset_left = -273.334
offset_top = 456.782
offset_right = -41.3336
offset_bottom = 506.782
scale = Vector2(1.245, 1.245)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_c20nu")
theme_override_font_sizes/normal_font_size = 48
text = "Diabetic: Yes"
fit_content = true
autowrap_mode = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
light_mask = 4
visibility_layer = 4
position = Vector2(0, -0.374939)
polygon = PackedVector2Array(1.42778, -61.3944, -22.8444, -44.9749, -29.9833, 62.1082, -21.4166, 164.908, -0.713888, 181.328, 22.8444, 167.05, 28.5555, 61.3944, 23.5583, -46.4027)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nuyas")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q7l04")
}

[node name="EmergencyTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="hidden" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_hidden"]
[connection signal="input_event" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="EmergencyTimer" to="." method="_on_emergency_timer_timeout"]
